--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,8 +9,8 @@ description: >
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://jhzgjhzg.github.io'
-baseurl:          '/BiliBili-UP-Auxiliary-System/docs'
+url:              'https://jhzgjhzg.github.io/BiliBili-UP-Auxiliary-System'
+baseurl:          '/docs'
 rss:              RSS
 
 # bootstrap: use the remote theme for the site itself
